going back to java 8 all for TS plugin only:proteus_f7